--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -30,13 +30,13 @@
 
 
 
-    <section class="pdb-110" data-background="images/bg/3.jpg" data-overlay-dark="12">
+    <section class="pdb-180" data-background="images/bg/3.jpg" data-overlay-dark="14">
         <div class="section-content">
             <div class="container">
                 <div class="row">
 
 
-                    <div class="col-lg-6" style="margin-left: 400px; margin-top: 270px">
+                    <div class="col-lg-6" style="margin-left: 370px; margin-top: 320px">
                         <div class="request-a-call-back-form ">
                             <h3 class="mrt-30 mrb-60 solid-bottom-line">Login</h3>
                             <p class="mrb-20"></p>
@@ -69,9 +69,9 @@
                                     </div>
 
 
-                                    <div class="btn-primary-color btn-block block" style="margin-left: 150px">
-                                            <a  href="{% url 'register' %}">Forgot Password ? Or Don't have an account yet?</a>
-                                        </div>
+{#                                    <div class="btn-primary-color btn-block block" style="margin-left: 150px">#}
+{#                                            <a  href="{% url 'register' %}">Forgot Password ? Or Don't have an account yet?</a>#}
+{#                                        </div>#}
 
 
 
