--- a/users/templates/certificates.html
+++ b/users/templates/certificates.html
@@ -49,6 +49,8 @@
     						<div class="table-header">
     							<h4 class="pricing-plan-name">{{ certificate.cer_deg}}</h4>
 
+
+
 {#    							<h4 class="pricing-plan-name">{{ certificate.participant_name}} {{ certificate.participant_name.surname }}</h4>#}
 
     						</div>
@@ -76,7 +78,7 @@
     							</ul>
     						</div>
     						<div class="table-footer">
-    							<a href="#" class="cs-btn-one btn-gradient-color">PDF</a>
+    							<a href="{% url 'pdf' certificate.cer_code %}" class="cs-btn-one btn-gradient-color">PDF</a>
     						</div>
     					</div>
     				</div>
