--- a/templates/activities_slog.html
+++ b/templates/activities_slog.html
@@ -28,7 +28,7 @@
 
                                 {% else %}
                                     <li>
-                                        <a href="{% url 'activity' %}" class="alert alert-danger">
+                                        <a href="{% url 'activity' %}">
                                             <i class="fa fa-chevron-left"></i>Go Back </a>
                                     </li>
                                 {% endif %}
