--- a/templates/index.html
+++ b/templates/index.html
@@ -9,39 +9,18 @@
     <div class="home-carousel owl-theme owl-carousel">
         <div class="slide-item">
             <div class="image-layer">
-                <img src="{% static 'images/bg/certificate.jpg' %}" alt="">
+                <img src="{% static 'images/jobs.jpg' %}" alt="">
             </div>
             <div class="auto-container">
                 <div class="row clearfix">
                     <div class="col-xl-8 col-lg-12 col-md-12 content-column">
                         <div class="content-box">
-                            <h1>Make a Good Plan & <br> Grow Your Business</h1>
-                            <p>We have almost 35+ years of experience for <br>providing consulting services solutions
+                            <h1>Join Our Activities & <br> Power Your Imagination</h1>
+                            <p>Increase your coding ability & Make Friends<br> always achieve success in your life
                             </p>
-{#                            <div class="btn-box">#}
-{#                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>#}
-{#                            </div>#}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="slide-item">
-            <div class="image-layer">
-                <img src="{% static 'images/bg/buldu.jpg' %}" alt="">
-            </div>
-            <div class="auto-container">
-                <div class="row clearfix">
-                    <div class="col-xl-8 col-lg-12 col-md-12 content-column">
-                        <div class="content-box">
-                            <h1>Make a Good Plan & <br> Grow Your Business</h1>
-                            <p>We have almost 35+ years of experience for <br>providing consulting services solutions
-                            </p>
-{#                            <div class="btn-box">#}
-{#                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>#}
-{#                            </div>#}
+                            <div class="btn-box">
+                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -56,12 +35,32 @@
                 <div class="row clearfix">
                     <div class="col-xl-8 col-lg-12 col-md-12 content-column">
                         <div class="content-box">
-                            <h1>Make a Good Plan & <br> Grow Your Business</h1>
-                            <p>We have almost 35+ years of experience for <br>providing consulting services solutions
+                            <h1>Join Our Activities & <br> Power Your Imagination</h1>
+                            <p>Increase your coding ability & Make Friends<br> always achieve success in your life
                             </p>
-{#                            <div class="btn-box">#}
-{#                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>#}
-{#                            </div>#}
+                            <div class="btn-box">
+                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide-item">
+            <div class="image-layer">
+                <img src="{% static 'images/robot.jpg' %}" alt="">
+            </div>
+            <div class="auto-container">
+                <div class="row clearfix">
+                    <div class="col-xl-8 col-lg-12 col-md-12 content-column">
+                        <div class="content-box">
+                            <h1>Join Our Activities & <br> Power Your Imagination</h1>
+                            <p>Increase your coding ability & Make Friends<br> always achieve success in your life
+                            </p>
+                            <div class="btn-box">
+                                <a href="{% url 'activity' %}" class="cs-btn-one btn-gradient-color">Get a Activity</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -276,11 +275,9 @@
 
                     <div class="col-lg-4">
                         <div class="request-a-call-back-form">
-                            <h3 class="mrt-0 mrb-20 solid-bottom-line">Feel Free to Contact Us</h3>
+                            <h3 id="git" class="mrt-0 mrb-20 solid-bottom-line">Feel Free to Contact Us</h3>
                             <p class="mrb-30">Distinctively exploit optimal alignments for intuitive coordinate business
                                 applications technologies</p>
-
-{#                            dokunma!!!#}
                             <form action="{% url 'contactview' %}" method="post">
                                         {% csrf_token %}
 
@@ -371,8 +368,8 @@
                     <div class="col-lg-8">
                         <div class="title-box-center">
 
-                            <h5 class="sub-title-center text-primary-color line-top-center mrb-30">Testimonials</h5>
-                            <h2 class="title">What People and Clients Think About Us?</h2>
+                            <h5 class="sub-title-center text-primary-color line-top-center mrb-30">Organizationsb</h5>
+                            <h2 class="title">We would like to thank all the sectors that contributed to us.</h2>
                         </div>
                     </div>
                     <div class="col"></div>
