--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -69,9 +69,9 @@
                                     </div>
 
 
-{#                                    <div class="btn-primary-color btn-block block" style="margin-left: 150px">#}
-{#                                            <a  href="{% url 'register' %}">Forgot Password ? Or Don't have an account yet?</a>#}
-{#                                        </div>#}
+                                    <div class="btn-primary-color btn-block block" style="margin-left: 150px">
+                                            <a  href="{% url 'register' %}">Forgot Password ? Or Don't have an account yet?</a>
+                                        </div>
 
 
 
