--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -1,33 +1,232 @@
+{#<!doctype html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <meta name="viewport"#}
+{#          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">#}
+{#    <meta http-equiv="X-UA-Compatible" content="ie=edge">#}
+{#    <title>Document</title>#}
+{#    <style>#}
+{##}
+{##}
+{##}
+{##}
+{##}
+{##}
+{##}
+{#        .degree {#}
+{#            text-align: center;#}
+{#            color: white;#}
+{#            font-size: 24px;#}
+{#            padding: 14px 16px;#}
+{#            border: 1px solid;#}
+{#            background-color: #0c59db;#}
+{#        }#}
+{##}
+{##}
+{#        .participant {#}
+{#            text-align: center;#}
+{#            color: #0c59db;#}
+{#            font-size: 20px#}
+{#        }#}
+{##}
+{##}
+{#        ul {#}
+{#            list-style-type: none;#}
+{#            margin: 0;#}
+{#            padding: 0;#}
+{#            overflow: hidden;#}
+{#        }#}
+{##}
+{#        li {#}
+{#            float: left;#}
+{#        }#}
+{##}
+{#        li:last-child {#}
+{#            border-right: none;#}
+{#        }#}
+{##}
+{#        li span {#}
+{#            display: block;#}
+{#            padding: 14px 16px;#}
+{#            text-decoration: none;#}
+{#        }#}
+{##}
+{#        .resim {#}
+{#            display: block;#}
+{#            width: 100px;#}
+{#            height: 100px;#}
+{#            max-height: 40px;#}
+{#            min-height: 10px;#}
+{#            border-radius: 35px;#}
+{##}
+{#        }#}
+{##}
+{#        .organisation_name {#}
+{#            display: block;#}
+{#            text-align: right;#}
+{#            color: #0c59db;#}
+{#            font-size: 24px;#}
+{#            border-right: none;#}
+{##}
+{##}
+{#        }#}
+{##}
+{##}
+{##}
+{##}
+{##}
+{##}
+{##}
+{#        .activity_name {#}
+{#            text-align: center;#}
+{#            color: #0c59db;#}
+{#            font-size: 20px#}
+{#        }#}
+{##}
+{#        .tarafindan {#}
+{#            text-align: center;#}
+{#            font-size: 20px#}
+{#        }#}
+{##}
+{##}
+{#        .tarafindan {#}
+{#            text-align: center;#}
+{#            font-size: 20px#}
+{#        }#}
+{##}
+{#        .host_name {#}
+{#            text-align: center;#}
+{#            color: #0c59db;#}
+{#            font-size: 20px#}
+{#        }#}
+{##}
+{#        .descriptions {#}
+{#            text-align: center;#}
+{#            font-size: 14px#}
+{#        }#}
+{##}
+{##}
+{#    </style>#}
+{##}
+{##}
+{#</head>#}
+{#<body>#}
+{##}
+{#<div class="preloader"></div>#}
+{#<section>#}
+{#    <div class="container">#}
+{#        <div class="row">#}
+{#            <div>#}
+{#                <div>#}
+{#                    <div class="degree">#}
+{#                        <h4>{{ certificate.cer_deg }}</h4>#}
+{#                    </div>#}
+{##}
+{#                    <div>#}
+{##}
+{##}
+{#                        <ul class="items">#}
+{#                            <li><span#}
+{#                                    class="organisation_name"#}
+{#                                    style="font-size: 24px; margin-top: 50px ">{{ certificate.organisation_name.org_name }}</span>#}
+{#                            </li>#}
+{#                            <li><span class="resim">#}
+{#                                <img src="{{ certificate.organisation_name.org_image.path }}" alt=""></span>#}
+{#                            </li>#}
+{##}
+{#                        </ul>#}
+{##}
+{#                        <br><br>#}
+{##}
+{#                        <div class="participant">#}
+{#                            Sayin {{ certificate.participant_name.name }} {{ certificate.participant_name.surname }}#}
+{#                        </div>#}
+{#                    <br><br>#}
+{##}
+{##}
+{#                        <div class="activity_name">#}
+{#                            {{ certificate.activity_name.activity_name }}#}
+{#                        </div>#}
+{##}
+{##}
+{#                        <div class="tarafindan">#}
+{#                            {{ certificate.activity_name.starttime.date }}#}
+{#                            tarihinde {{ certificate.organisation_name.org_name }} Koordinatorlugunde#}
+{#                        </div>#}
+{#                    <br>#}
+{##}
+{##}
+{#                    <div class="host_name">#}
+{#                        {% for certificate in certificate.host_name.all %}#}
+{#                            <span style="font-size: 22px; color: #0c59db">{{ certificate.host_name }} {{ certificate.surname }}, </span>#}
+{#                        {% endfor %}#}
+{#                    </div>#}
+{##}
+{#                    <br>#}
+{#                        <div class="descriptions">#}
+{#                            {{ certificate.organisation_name.org_description|truncatewords:30 }}#}
+{#                            {{ certificate.cer_description|truncatewords:30 }}#}
+{#                        </div>#}
+{#                    </div>#}
+{##}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</section>#}
+{##}
+{##}
+{#</body>#}
+{#</html>#}
+{##}
+{##}
+{##}
+
+
+
+
+
+
+
+
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 <head>
-    <meta charset="UTF-8">
+    #coding:utf8
+    <meta charset="utf-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0 ">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
 
 
-
-
-
-
+        @page {
+            size: landscape;
+        }
 
         .degree {
             text-align: center;
             color: white;
-            font-size: 24px;
-            padding: 14px 16px;
-            border: 1px solid;
-            background-color: #0c59db;
+            font-size: 50px;
+            border: 0px;
+            background-color: #0c1c42;
+            height: 500px;
+            font-family: Brush Script MT, serif;
+            padding-top: 50px;
+            padding-bottom: 40px;
         }
 
 
         .participant {
+            padding-top: 70px;
             text-align: center;
-            color: #0c59db;
-            font-size: 20px
+            border: 0px;
+            color: #0c1c42;
+            font-size: 25px;
+            font-family: Arial, serif;
+            font-weight: bold;
         }
 
 
@@ -53,123 +252,141 @@
         }
 
         .resim {
-            display: block;
-            width: 100px;
-            height: 100px;
-            max-height: 40px;
-            min-height: 10px;
-            border-radius: 35px;
+            max-width: 200px;
+            height: 200px;
+            float: left;
+            border: 0px;
+        {#max-height: 40px;#}{#min-height: 10px;#} border-radius: 35px;
+            padding-left: 70px;
+            padding-top: 0px;
 
         }
+
 
         .organisation_name {
-            display: block;
-            text-align: right;
-            color: #0c59db;
+            float: right;
+            color: #0c1c42;
             font-size: 24px;
+            border: 0px;
             border-right: none;
+            font-family: Arial, serif;
+            padding-right: 30px;
+            position: absolute;
+            top: 50px;
+            padding-top: 70px;
+            width: 100px;
+            text-align: right;
 
 
         }
-
-
-
-
-
 
 
         .activity_name {
+            border: 0px;
             text-align: center;
-            color: #0c59db;
-            font-size: 20px
+            color: #749ee7;
+            padding-top: 0px;
+            font-size: 35px;
+            font-family: Arial, serif;
+            font-weight: bold;
         }
 
         .tarafindan {
+            border: 0px;
             text-align: center;
-            font-size: 20px
-        }
-
-
-        .tarafindan {
-            text-align: center;
-            font-size: 20px
+            font-size: 20px;
+            font-family: Arial, serif;
         }
 
         .host_name {
+            border: 0px;
             text-align: center;
-            color: #0c59db;
-            font-size: 20px
+            color: #7a8494;
+            font-size: 20px;
+            font-family: Arial, serif;
+            font-weight: bold;
         }
 
         .descriptions {
+            border: 0px;
             text-align: center;
-            font-size: 14px
+            font-size: 20px;
+            font-family: Arial, serif;
+            padding-right: 80px;
+            padding-left: 80px;
         }
 
-
+        footer {
+            clear: both;
+            position: relative;
+            height: 200px;
+            margin-top: -200px;
+        }
     </style>
 
 
 </head>
 <body>
 
-<div class="preloader"></div>
+
 <section>
     <div class="container">
-        <div class="row">
+        <div class="degree">
+            <h4>{{ certificate.cer_deg }}</h4>
+        </div>
+        <div class="row ">
             <div>
                 <div>
-                    <div class="degree">
-                        <h4>{{ certificate.cer_deg }}</h4>
-                    </div>
 
                     <div>
+                        <div style="position: relative; width: 250px;">
+                            {#                            <div class="organisation_name">#}
+                            {##}
+                            {##}
+                            {#                            </div>#}
+
+                        </div>
+                        <div class="resim" style=" height:100px;width:auto;">
+                            <img src="{{ certificate.organisation_name.org_image.path }}" alt="">
+                            <pre class="tab organisation_name"
+                                 style="display:inline-block;">
+                                                                                              {{ certificate.organisation_name.org_name }}</pre>
 
 
-                        <ul class="items">
-                            <li><span
-                                    class="organisation_name"
-                                    style="font-size: 24px; margin-top: 50px ">{{ certificate.organisation_name.org_name }}</span>
-                            </li>
-                            <li><span class="resim">
-                                <img src="{{ certificate.organisation_name.org_image.path }}" alt=""></span>
-                            </li>
-
-                        </ul>
+                        </div>
+                        <div class="participant">
+                            Dear {{ certificate.participant_name.name }} {{ certificate.participant_name.surname }}
+                        </div>
 
                         <br><br>
-
-                        <div class="participant">
-                            Sayin {{ certificate.participant_name.name }} {{ certificate.participant_name.surname }}
-                        </div>
-                    <br><br>
 
 
                         <div class="activity_name">
                             {{ certificate.activity_name.activity_name }}
                         </div>
-
-
-                        <div class="tarafindan">
-                            {{ certificate.activity_name.starttime.date }}
-                            tarihinde {{ certificate.organisation_name.org_name }} Koordinatorlugunde
-                        </div>
-                    <br>
-
-
-                    <div class="host_name">
-                        {% for certificate in certificate.host_name.all %}
-                            <span style="font-size: 22px; color: #0c59db">{{ certificate.host_name }} {{ certificate.surname }}, </span>
-                        {% endfor %}
-                    </div>
-
-                    <br>
+                        <br><br>
                         <div class="descriptions">
-{#                            {{ certificate.organisation_name.org_description|truncatewords:30 }}#}
+                            {#                            {{ certificate.organisation_name.org_description|truncatewords:30 }}#}
                             {{ certificate.cer_description|truncatewords:30 }}
                         </div>
-                    </div>
+                        <div class="tarafindan">
+                            {{ certificate.organisation_name.org_name }}
+                            on {{ certificate.activity_name.starttime.date }}
+                        </div>
 
+
+                        <div class="host_name">
+                            {% for certificate in certificate.host_name.all %}
+                                <span style="font-size: 22px; font-weight: bold">{{ certificate.host_name }} {{ certificate.surname }}, </span>
+                            {% endfor %}
+                        </div>
+                        <div class="imza" style=" height:100px;width:auto; margin-left: 50px">
+                            <img src="../Certificate/static/images/imza.png" alt="">
+
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -179,6 +396,3 @@
 
 </body>
 </html>
-
-
-
