--- a/templates/activities_slog.html
+++ b/templates/activities_slog.html
@@ -29,7 +29,7 @@
                                 {% else %}
                                     <li>
                                         <a href="{% url 'activity' %}">
-                                            <i class="fa fa-chevron-left"></i>Go Back </a>
+                                            <i class="fa fa-chevron-left"></i>Go ile </a>
                                     </li>
                                 {% endif %}
 
