--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,15 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
+    <style>
+        .Active {
+            background: linear-gradient(-20deg, #0E90D5, #3032A2) !important;
+            color: #fff !important;
+            padding: 15px 30px 15px 30px !important;
+            border-radius: 30px;
+        }
+    </style>
 </head>
 
 
@@ -47,7 +56,8 @@
 
                             {% if user.is_authenticated %}
                                 <a class="language-btn" href="#"><i class="fas fa-user"
-                                                                    style="margin: 0.3rem"></i>{{ user|truncatechars:6 }}</a>
+                                                                    style="margin: 0.3rem"></i>{{ user|truncatechars:6 }}
+                                </a>
 
                             {% else %}
                                 <a class="language-btn" href="{% url 'login' %}"><i class="fas fa-user"
@@ -95,17 +105,16 @@
 
                         </div>
 
-                        <div class="main-menu f-right">
+                        <div class="main-menu f-right degistirecem">
+
                             <nav id="mobile-menu-right">
-                                <ul>
+                                <ul id="menu">
+
                                     <li><a href="{% url 'index' %}">Home</a></li>
                                     <li><a href="{% url 'organizations' %}">Organization</a></li>
                                     <li><a href="{% url 'activity' %}">Activities</a></li>
                                     <li><a href="{% url 'hosts' %}">Hosts</a></li>
                                     <li><a href="{% url 'participants' %}">Participant</a></li>
-                                    {#                                    <li><a href="{% url 'certificates' %}">Certificate</a></li>#}
-
-
                                     {% if request.user.is_staff %}
                                         <li><a href="{% url 'certificalar' %}">Certificate</a></li>
                                     {% endif %}
@@ -174,16 +183,26 @@
 
 
                 <div class="col-xl-3 col-lg-6 col-md-6">
-                    <div class="widget footer-widget">
+                    <div class="widget footer-widget ">
+                    <div >
                         <h5 class="widget-title text-white mrb-30">Useful Links</h5>
                         <ul class="footer-widget-list">
                             <li><a href="{% url 'index' %}">Home</a></li>
+
                             <li><a href="{% url 'organizations' %}">Organization</a></li>
                             <li><a href="{% url 'activity' %}">Activities</a></li>
                             <li><a href="{% url 'hosts' %}">Hosts</a></li>
                             <li><a href="{% url 'participants' %}">Participant</a></li>
-                            <li><a href="{% url 'certificalar' %}">Certificate</a></li>
+                            {% if request.user.is_staff %}
+                                <li><a href="{% url 'certificalar' %}">Certificate</a></li>
+                            {% endif %}
+
+
+
+
+
                         </ul>
+                    </div>
                     </div>
                 </div>
 
@@ -216,11 +235,41 @@
         </div>
     </div>
 
+
 </footer>
+
 
 <div class="back-to-top bg-gradient-color">
     <i class="fab fa-angle-up"></i>
 </div>
+
+
+{#<script type="text/javascript">#}
+{#    navbars = document.querySelector(".degistirecem").querySelectorAll("a");#}
+{#    console.log(navbars);#}
+{#    navbars.forEach(element => {#}
+{#        element.addEventListener("click", function () {#}
+{#            navbars.forEach(nav => nav.classList.remove("Active"));#}
+{#            this.classList.add('Active');#}
+{#        })#}
+{#    })#}
+{##}
+{##}
+{#</script>#}
+
+
+<script src="{% static 'js/jq.js' %}"></script>
+{#<script#}
+{#  src="https://code.jquery.com/jquery-3.6.0.js"#}
+{#  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="#}
+{#  crossorigin="anonymous"></script>#}
+{#<script type="text/javascript">#}
+{#    $(document).on('click', 'ul li', function (){#}
+{#        $(this).addClass('active').siblings().removeClass('active')#}
+{#    })#}
+{##}
+{#</script>#}
+
 <script src="{% static 'js/jquery.v1.12.4.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/jquery-core-plugins.js' %}"></script>
