--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -380,7 +380,7 @@
                                 <span style="font-size: 22px; font-weight: bold">{{ certificate.host_name }} {{ certificate.surname }}, </span>
                             {% endfor %}
                         </div>
-
+Vin Diesel
 
                     </div>
                 </div>
