--- a/users/templates/certificates.html
+++ b/users/templates/certificates.html
@@ -65,15 +65,14 @@
     								<li><i class=" mrr-10 " style="margin-left: 700px; margin-bottom: 700px;"></i><strong><span style="color: #0c59db; font-size: 22px">{{ certificate.organisation_name.org_name }}</span></strong></li>
     								<li><i class="mrr-10"></i><span style="color: darkblue; font-size: 24px; ">Sayın {{ certificate.participant_name.name }} {{ certificate.participant_name.surname }}</span></li>
     								<li><i class="mrr-10"></i><span style="color: #0c59db; font-size: 24px">"{{ certificate.activity_name.activity_name }}"</span></li>
-    								<li><i class="mrr-10"></i><span>{{ certificate.activity_name.activity_date.date }} tarihinde {{ certificate.organisation_name.org_name }} Koordinatörlüğünde</span></li>
+    								<li><i class="mrr-10"></i><span>{{ certificate.activity_name.starttime.date }} tarihinde {{ certificate.organisation_name.org_name }} Koordinatörlüğünde</span></li>
     								{% for certificate in certificate.host_name.all %}
                                         <span style="font-size: 22px; color: #0c59db">{{ certificate.host_name }} {{ certificate.surname }}, </span>
     								{% endfor %}
 
                                     <br>
 
-
-                                    <li><i class="mrr-10"></i><span>"{{ certificate.organisation_name.org_description|truncatewords:30 }}"</span></li>
+                                    <li><i class="mrr-10"></i><span>"{{ certificate.cer_description|truncatewords:30 }}"</span></li>
 
     							</ul>
     						</div>
