--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             color: #fff !important;
             padding: 15px 30px 15px 30px !important;
             border-radius: 30px;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -118,17 +119,9 @@
                                     {% if request.user.is_staff %}
                                         <li><a href="{% url 'certificalar' %}">Certificate</a></li>
                                     {% endif %}
-
-
-                                    {#                                    <li class="has-sub right-view">#}
-                                    {#                                        <a href="#">News</a>#}
-                                    {#                                        <ul class="sub-menu">#}
-                                    {#                                            <li><a href="page-news.html">News Classic</a></li>#}
-                                    {#                                            <li><a href="page-news-left-sidebar.html">News Left Sidebar</a></li>#}
-                                    {#                                            <li><a href="page-news-right-sidebar.html">News Right Sidebar</a></li>#}
-                                    {#                                            <li><a href="page-single-news.html">Single News</a></li>#}
-                                    {#                                        </ul>#}
-                                    {#                                    </li>#}
+                                    {% if request.user.is_staff %}
+                                        <li><a href="{% url 'qr' %}">QR Code</a></li>
+                                    {% endif %}
                                 </ul>
                             </nav>
                         </div>
@@ -184,42 +177,107 @@
 
                 <div class="col-xl-3 col-lg-6 col-md-6">
                     <div class="widget footer-widget ">
-                    <div >
-                        <h5 class="widget-title text-white mrb-30">Useful Links</h5>
-                        <ul class="footer-widget-list">
-                            <li><a href="{% url 'index' %}">Home</a></li>
+                        <div>
+                            <h5 class="widget-title text-white mrb-30">Useful Links</h5>
+                            <ul class="footer-widget-list">
+                                <li><a href="{% url 'index' %}">Home</a></li>
 
-                            <li><a href="{% url 'organizations' %}">Organization</a></li>
-                            <li><a href="{% url 'activity' %}">Activities</a></li>
-                            <li><a href="{% url 'hosts' %}">Hosts</a></li>
-                            <li><a href="{% url 'participants' %}">Participant</a></li>
-                            {% if request.user.is_staff %}
-                                <li><a href="{% url 'certificalar' %}">Certificate</a></li>
-                            {% endif %}
-
-
+                                <li><a href="{% url 'organizations' %}">Organization</a></li>
+                                <li><a href="{% url 'activity' %}">Activities</a></li>
+                                <li><a href="{% url 'hosts' %}">Hosts</a></li>
+                                <li><a href="{% url 'participants' %}">Participant</a></li>
+                                {% if request.user.is_staff %}
+                                    <li><a href="{% url 'certificalar' %}">Certificate</a></li>
+                                {% endif %}
 
 
-
-                        </ul>
-                    </div>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
 
                 <div class="col-xl-4 col-lg-6 col-md-6">
                     <div class="widget footer-widget">
-                        <h5 class="widget-title text-white mrb-30">Contact Us</h5>
-                        <p class="text-light-gray">If there is any site you want, you can contact me directly. I am
-                            ready to present a site that looks
-                            both cheap and beautiful as soon as possible.</p>
-                        <div class="btn-box">
-                            <a href="#git" class="cs-btn-one btn-gradient-color">Contact Us</a>
-                        </div>
+                        <h5 class="widget-title text-white mrb-30">Join Us</h5>
+                        <p class="text-light-gray mb-1">Seamlessly visualize quality intellectual capital without.</p>
+                        <form action="{% url 'contactview' %}" method="post">
+                            {% csrf_token %}
+                            <div class="col-lg-12">
+                                <div>
+                                    <input type="email" name="email" required placeholder="Email"
+                                           class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 ">
+                                <div class=" mrb-0">
+                                    <button type="submit"
+                                            class="cs-btn-one btn-gradient-color btn-sm has-icon mrt-20 btn-block"><i
+                                            class="webexflaticon flaticon-send"></i>
+                                        Send Post
+                                    </button>
+                                </div>
+                            </div>
+                            {#							    <a href="#" class="cs-btn-one btn-gradient-color btn-sm has-icon mrt-20"><i class="webexflaticon flaticon-send"></i>Submit Now</a>#}
+                        </form>
                     </div>
                 </div>
+
+                {#              <div class="col-xl-4 col-lg-4 " >#}
+                {#                    <div class="widget footer-widget">#}
+                {#                        <h5 class="widget-title text-white mrb-150">Send Email</h5>#}
+                {#                        <div class="request-a-call-back-form" style="margin-left: auto">#}
+                {#                            <form action="#" method="post">#}
+                {#                                {% csrf_token %}#}
+                {##}
+                {#                                <div class="row">#}
+                {##}
+                {#                                    <div class="col-lg-12">#}
+                {#                                        <div style="margin: 2px">#}
+                {#                                            <input type="text" name="fullname" required placeholder="FullName"#}
+                {#                                                   class="form-control">#}
+                {#                                        </div>#}
+                {#                                    </div>#}
+                {##}
+                {##}
+                {#                                    <div class="col-lg-12">#}
+                {#                                        <div style="margin: 2px">#}
+                {#                                            <input type="email" name="email" required placeholder="Email"#}
+                {#                                                   class="form-control">#}
+                {#                                        </div>#}
+                {#                                    </div>#}
+                {##}
+                {#                                    <div class="col-lg-12">#}
+                {#                                        <div style="margin: 2px">#}
+                {#                                            <input type="text" name="subject" required placeholder="Subject"#}
+                {#                                                   class="form-control">#}
+                {#                                        </div>#}
+                {#                                    </div>#}
+                {#                                    <div class="col-lg-12">#}
+                {#                                        <div style="margin: 2px">#}
+                {#                                                    <textarea rows="2" cols="36" name="description" required#}
+                {#                                                              placeholder="Messages"#}
+                {#                                                              style="border: 1px solid; border-color: #8b8b8b" ></textarea>#}
+                {#                                        </div>#}
+                {#                                    </div>#}
+                {##}
+                {##}
+                {#                                    <div class="col-lg-12">#}
+                {#                                        <div style="margin: 2px">#}
+                {#                                            <button type="submit" class="cs-btn-one btn-primary-color btn-sm btn-block">#}
+                {#                                                Send Post#}
+                {#                                            </button>#}
+                {#                                        </div>#}
+                {#                                    </div>#}
+                {#                                </div>#}
+                {#                            </form>#}
+                {#                        </div>#}
             </div>
+
         </div>
+    </div>
+    </div>
+    </div>
     </div>
     <div class="footer-bottom-area">
         <div class="container">
@@ -244,31 +302,8 @@
 </div>
 
 
-{#<script type="text/javascript">#}
-{#    navbars = document.querySelector(".degistirecem").querySelectorAll("a");#}
-{#    console.log(navbars);#}
-{#    navbars.forEach(element => {#}
-{#        element.addEventListener("click", function () {#}
-{#            navbars.forEach(nav => nav.classList.remove("Active"));#}
-{#            this.classList.add('Active');#}
-{#        })#}
-{#    })#}
-{##}
-{##}
-{#</script>#}
-
-
 <script src="{% static 'js/jq.js' %}"></script>
-{#<script#}
-{#  src="https://code.jquery.com/jquery-3.6.0.js"#}
-{#  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="#}
-{#  crossorigin="anonymous"></script>#}
-{#<script type="text/javascript">#}
-{#    $(document).on('click', 'ul li', function (){#}
-{#        $(this).addClass('active').siblings().removeClass('active')#}
-{#    })#}
-{##}
-{#</script>#}
+
 
 <script src="{% static 'js/jquery.v1.12.4.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
