--- a/templates/index.html
+++ b/templates/index.html
@@ -317,17 +317,12 @@
                                             </div>
 
 
-                                            <div class="col-lg-8">
+                                            <div class="col-lg-12">
                                                 <div class=" mrb-0">
-
-
-                                                    <button type="submit" class="cs-btn-one btn-primary-color btn-sm">
-                                                        Post Comment
+                                                    <button type="submit" class="cs-btn-one btn-primary-color btn-sm btn-block">
+                                                        Send Post
                                                     </button>
                                                 </div>
-
-
-
                                             </div>
                                         </div>
                                     </form>
